Fix issue where the closed window menu got cut off.
Also, fix issue where the recent items could not be executed using the
keyboard.

BUG=15104, 15111

TEST=Open a new window with 5+ tabs and close it. Then go to the new
new tab page and mouseover the item "5" tabs". It should show the whole
menu and you should also be able to tab to it and pressing enter when
focused should reopen the window.

Review URL: http://codereview.chromium.org/147054

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@19093 0039d316-1c4b-4281-b951-d872f2087c98

--- a/chrome/browser/resources/new_new_tab.css
+++ b/chrome/browser/resources/new_new_tab.css
@@ -470,19 +470,7 @@ html[dir='rtl'] .item {
   opacity: .9;
   z-index: 1;
   pointer-events: none;
-}
-
-.item:hover > .window-menu,
-.item:focus > .window-menu {
-  display: block;
-}
-
-.item:hover .window-menu .item,
-.item:focus .window-menu .item {
-  background-color: transparent;
-  text-decoration: none;
-  margin: 0;
-  font-size: 100%;
+  padding: 1px;
 }
 
 .hbox {
@@ -655,7 +643,6 @@ html[dir='rtl'] #option-menu {
 
 #option-menu > div {
   padding: 3px 8px;
-  margin: 1px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
